Fixed article teaser block on IE11

--- a/source/frontend/src/asset/style/asset/form/input.scss
+++ b/source/frontend/src/asset/style/asset/form/input.scss
@@ -24,7 +24,7 @@
 	}
 
 	input {
-		width: 100%;
+		@include size(100%);
 	}
 
 	input::-ms-clear {
